--- a/environment.yml
+++ b/environment.yml
@@ -6,9 +6,82 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - numpy
-  - pandas
-  - scikit-learn
-  - matplotlib
-  - seaborn
-  - requests
+  - appdirs=1.4.4
+  - attrs=20.3.0
+  - black=19.10b0
+  - blas=1.0
+  - brotlipy=0.7.0
+  - ca-certificates=2021.1.19
+  - certifi=2020.12.5
+  - cffi=1.14.4
+  - chardet=4.0.0
+  - click=7.1.2
+  - cryptography=3.3.1
+  - cycler=0.10.0
+  - freetype=2.10.4
+  - idna=2.10
+  - importlib-metadata=2.0.0
+  - importlib_metadata=2.0.0
+  - iniconfig=1.1.1
+  - intel-openmp=2019.4
+  - joblib=1.0.0
+  - jpeg=9b
+  - kiwisolver=1.3.1
+  - lcms2=2.11
+  - libcxx=10.0.0
+  - libedit=3.1.20191231
+  - libffi=3.3
+  - libgfortran=3.0.1
+  - libpng=1.6.37
+  - libtiff=4.1.0
+  - llvm-openmp=10.0.0
+  - lz4-c=1.9.3
+  - matplotlib=3.3.2
+  - matplotlib-base=3.3.2
+  - mkl=2019.4
+  - mkl-service=2.3.0
+  - mkl_fft=1.2.0
+  - mkl_random=1.1.1
+  - more-itertools=8.6.0
+  - mypy_extensions=0.4.3
+  - ncurses=6.2
+  - numpy=1.19.2
+  - numpy-base=1.19.2
+  - olefile=0.46
+  - openssl=1.1.1i
+  - packaging=20.9
+  - pandas=1.2.1
+  - pathspec=0.7.0
+  - pillow=8.1.0
+  - pip=20.3.3
+  - pluggy=0.13.1
+  - py=1.10.0
+  - pycparser=2.20
+  - pyopenssl=20.0.1
+  - pyparsing=2.4.7
+  - pysocks=1.7.1
+  - pytest=6.2.2
+  - python=3.7.9
+  - python-dateutil=2.8.1
+  - pytz=2021.1
+  - readline=8.1
+  - regex=2020.11.13
+  - requests=2.25.1
+  - scikit-learn=0.23.2
+  - scipy=1.5.2
+  - seaborn=0.11.1
+  - setuptools=52.0.0
+  - six=1.15.0
+  - sqlite=3.33.0
+  - threadpoolctl=2.1.0
+  - tk=8.6.10
+  - toml=0.10.1
+  - tornado=6.1
+  - typed-ast=1.4.2
+  - typing_extensions=3.7.4.3
+  - urllib3=1.26.3
+  - wheel=0.36.2
+  - xz=5.2.5
+  - zipp=3.4.0
+  - zlib=1.2.11
+  - zstd=1.4.5
