--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,63 +1,57 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: osx-64
-blas=1.0=mkl
-brotlipy=0.7.0=py38h9ed2024_1003
-ca-certificates=2020.12.8=hecd8cb5_0
-certifi=2020.12.5=py38hecd8cb5_0
-cffi=1.14.4=py38h2125817_0
-chardet=4.0.0=py38hecd8cb5_1003
-cryptography=3.3.1=py38hbcfaee0_0
-cycler=0.10.0=py38_0
-freetype=2.10.4=ha233b18_0
-idna=2.10=py_0
-intel-openmp=2019.4=233
-joblib=1.0.0=pyhd3eb1b0_0
-jpeg=9b=he5867d9_2
-kiwisolver=1.3.0=py38h23ab428_0
-lcms2=2.11=h92f6f08_0
-libcxx=10.0.0=1
-libedit=3.1.20191231=h1de35cc_1
-libffi=3.3=hb1e8313_2
-libgfortran=3.0.1=h93005f0_2
-libpng=1.6.37=ha441bb4_0
-libtiff=4.1.0=hcb84e12_1
-llvm-openmp=10.0.0=h28b9765_0
-lz4-c=1.9.2=h79c402e_3
-matplotlib=3.3.2=hecd8cb5_0
-matplotlib-base=3.3.2=py38h181983e_0
-mkl=2019.4=233
-mkl-service=2.3.0=py38h9ed2024_0
-mkl_fft=1.2.0=py38hc64f4ea_0
-mkl_random=1.1.1=py38h959d312_0
-ncurses=6.2=h0a44026_1
-numpy=1.19.2=py38h456fd55_0
-numpy-base=1.19.2=py38hcfb5961_0
-olefile=0.46=py_0
-openssl=1.1.1i=h9ed2024_0
-pandas=1.1.5=py38hb2f4e1b_0
-pillow=8.0.1=py38h5270095_0
-pip=20.3.3=py38hecd8cb5_0
-pycparser=2.20=py_2
-pyopenssl=20.0.1=pyhd3eb1b0_1
-pyparsing=2.4.7=py_0
-pysocks=1.7.1=py38_1
-python=3.8.5=h26836e1_1
-python-dateutil=2.8.1=py_0
-pytz=2020.4=pyhd3eb1b0_0
-readline=8.0=h1de35cc_0
-requests=2.25.1=pyhd3eb1b0_0
-scikit-learn=0.23.2=py38h959d312_0
-scipy=1.5.2=py38h2515648_0
-seaborn=0.11.1=pyhd3eb1b0_0
-setuptools=51.0.0=py38hecd8cb5_2
-six=1.15.0=py38hecd8cb5_0
-sqlite=3.33.0=hffcf06c_0
-threadpoolctl=2.1.0=pyh5ca1d4c_0
-tk=8.6.10=hb0a8c7a_0
-tornado=6.1=py38h9ed2024_0
-urllib3=1.26.2=pyhd3eb1b0_0
-wheel=0.36.2=pyhd3eb1b0_0
-xz=5.2.5=h1de35cc_0
-zlib=1.2.11=h1de35cc_3
-zstd=1.4.5=h41d2c2f_0
+appdirs==1.4.4
+attrs==20.3.0
+black==19.10b0
+brotlipy==0.7.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+cryptography==3.3.1
+cycler==0.10.0
+idna==2.10
+importlib-metadata==2.0.0
+iniconfig==1.1.1
+joblib==1.0.0
+kiwisolver==1.3.1
+matplotlib==3.3.2
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+more-itertools==8.6.0
+mypy-extensions==0.4.3
+numpy==1.19.2
+olefile==0.46
+packaging==20.9
+pandas==1.2.1
+pathspec==0.7.0
+Pillow==8.1.0
+pip==20.3.3
+pluggy==0.13.1
+py==1.10.0
+pycparser==2.20
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+PySocks==1.7.1
+pytest==6.2.2
+python-dateutil==2.8.1
+pytz==2021.1
+regex==2020.11.13
+requests==2.25.1
+rfc3986==1.4.0
+scikit-learn==0.23.2
+scipy==1.5.2
+seaborn==0.11.1
+setuptools==52.0.0.post20210125
+six==1.15.0
+threadpoolctl==2.1.0
+toml==0.10.1
+tornado==6.1
+twine==3.3.0
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+wheel==0.36.2
+zipp==3.4.0
