--- a/environment.yml
+++ b/environment.yml
@@ -1,87 +1,161 @@
-# This file may be used to create an environment using:
-# conda env create -f environment.yml
 name: causeinfer-dev
 channels:
-  - anaconda
   - conda-forge
+  - anaconda
   - defaults
 dependencies:
   - appdirs=1.4.4
+  - appnope=0.1.2
+  - argon2-cffi=20.1.0
+  - async_generator=1.10
   - attrs=20.3.0
+  - backcall=0.2.0
   - black=19.10b0
   - blas=1.0
+  - bleach=3.3.0
   - brotlipy=0.7.0
   - ca-certificates=2021.1.19
   - certifi=2020.12.5
   - cffi=1.14.4
   - chardet=4.0.0
   - click=7.1.2
-  - cryptography=3.3.1
+  - coverage=5.4
+  - cryptography=3.4.4
   - cycler=0.10.0
+  - dbus=1.13.18
+  - decorator=4.4.2
+  - defusedxml=0.6.0
+  - entrypoints=0.3
+  - expat=2.2.10
   - freetype=2.10.4
+  - gettext=0.19.8.1
+  - glib=2.67.4
+  - icu=58.2
   - idna=2.10
   - importlib-metadata=2.0.0
   - importlib_metadata=2.0.0
   - iniconfig=1.1.1
   - intel-openmp=2019.4
+  - ipykernel=5.3.4
+  - ipython=7.20.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.6.3
+  - jedi=0.17.2
+  - jinja2=2.11.3
   - joblib=1.0.0
   - jpeg=9b
+  - jsonschema=3.2.0
+  - jupyter=1.0.0
+  - jupyter_client=6.1.7
+  - jupyter_console=6.2.0
+  - jupyter_core=4.7.1
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_widgets=1.0.0
   - kiwisolver=1.3.1
   - lcms2=2.11
   - libcxx=10.0.0
   - libedit=3.1.20191231
   - libffi=3.3
   - libgfortran=3.0.1
+  - libiconv=1.16
   - libpng=1.6.37
+  - libsodium=1.0.18
   - libtiff=4.1.0
   - llvm-openmp=10.0.0
   - lz4-c=1.9.3
+  - markupsafe=1.1.1
   - matplotlib=3.3.2
   - matplotlib-base=3.3.2
+  - mistune=0.8.4
   - mkl=2019.4
   - mkl-service=2.3.0
   - mkl_fft=1.2.0
   - mkl_random=1.1.1
   - more-itertools=8.6.0
   - mypy_extensions=0.4.3
+  - nb_conda_kernels=2.3.1
+  - nbclient=0.5.2
+  - nbconvert=6.0.7
+  - nbformat=5.1.2
   - ncurses=6.2
+  - nest-asyncio=1.5.1
+  - notebook=6.2.0
   - numpy=1.19.2
   - numpy-base=1.19.2
   - olefile=0.46
-  - openssl=1.1.1i
+  - openssl=1.1.1j
   - packaging=20.9
   - pandas=1.2.1
+  - pandoc=2.11
+  - pandocfilters=1.4.3
+  - parso=0.7.0
   - pathspec=0.7.0
+  - patsy=0.5.1
+  - pcre=8.44
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
   - pillow=8.1.0
   - pip=20.3.3
   - pluggy=0.13.1
+  - prometheus_client=0.9.0
+  - prompt-toolkit=3.0.8
+  - prompt_toolkit=3.0.8
+  - ptyprocess=0.7.0
   - py=1.10.0
   - pycparser=2.20
+  - pygments=2.8.0
   - pyopenssl=20.0.1
   - pyparsing=2.4.7
+  - pyqt=5.9.2
+  - pyrsistent=0.17.3
   - pysocks=1.7.1
   - pytest=6.2.2
+  - pytest-cov=2.11.1
   - python=3.7.9
   - python-dateutil=2.8.1
+  - python_abi=3.7
   - pytz=2021.1
+  - pyzmq=20.0.0
+  - qt=5.9.7
+  - qtconsole=5.0.2
+  - qtpy=1.9.0
   - readline=8.1
   - regex=2020.11.13
   - requests=2.25.1
   - scikit-learn=0.23.2
   - scipy=1.5.2
   - seaborn=0.11.1
+  - seaborn-base=0.11.1
+  - send2trash=1.5.0
   - setuptools=52.0.0
+  - sip=4.19.8
   - six=1.15.0
   - sqlite=3.33.0
+  - statsmodels=0.12.0
+  - terminado=0.9.2
+  - testpath=0.4.4
   - threadpoolctl=2.1.0
   - tk=8.6.10
   - toml=0.10.1
   - tornado=6.1
+  - traitlets=5.0.5
   - typed-ast=1.4.2
   - typing_extensions=3.7.4.3
   - urllib3=1.26.3
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
   - wheel=0.36.2
+  - widgetsnbextension=3.5.1
   - xz=5.2.5
+  - zeromq=4.3.3
   - zipp=3.4.0
   - zlib=1.2.11
   - zstd=1.4.5
+  - pip:
+    - jupyter-contrib-core==0.3.3
+    - jupyter-contrib-nbextensions==0.5.1
+    - jupyter-highlight-selected-word==0.2.0
+    - jupyter-latex-envs==1.4.6
+    - jupyter-nbextensions-configurator==0.4.1
+    - lxml==4.6.2
+    - pyyaml==5.4.1
