Edit .gitignore for WIP files and add advanced_algorithms dir

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,12 @@ causeinfer-dev
 
 # Testing files
 ###############
+testing_files
 .coverage
 _*.ipynb
+
+
+# WIP files
+###########
+grf
+generalized_random_forest
