Update requirements and env dependencies to minimums

--- a/environment.yml
+++ b/environment.yml
@@ -3,364 +3,15 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _anaconda_depends=2020.07
-  - _ipyw_jlab_nb_ext_conf=0.1.0
-  - alabaster=0.7.12
-  - anaconda=custom
-  - anaconda-client=1.7.2
-  - anaconda-navigator=1.10.0
-  - anaconda-project=0.9.1
-  - anyio=2.2.0
-  - appdirs=1.4.4
-  - applaunchservices=0.2.1
-  - appnope=0.1.2
-  - appscript=1.1.2
-  - argh=0.26.2
-  - argon2-cffi=20.1.0
-  - asn1crypto=1.4.0
-  - astroid=2.5
-  - astropy=4.2
-  - async_generator=1.10
-  - atomicwrites=1.4.0
-  - attrs=20.3.0
-  - autopep8=1.5.6
-  - babel=2.9.0
-  - backcall=0.2.0
-  - backports=1.0
-  - backports.functools_lru_cache=1.6.3
-  - backports.shutil_get_terminal_size=1.0.0
-  - backports.tempfile=1.0
-  - backports.weakref=1.0.post1
-  - beautifulsoup4=4.9.3
-  - bitarray=1.9.1
-  - bkcharts=0.2
-  - black=19.10b0
-  - blas=1.0
-  - bleach=3.3.0
-  - blosc=1.21.0
-  - bokeh=2.3.0
-  - boto=2.49.0
-  - bottleneck=1.3.2
-  - brotlipy=0.7.0
-  - bzip2=1.0.8
-  - c-ares=1.17.1
-  - ca-certificates=2021.1.19
-  - certifi=2020.12.5
-  - cffi=1.14.5
-  - chardet=4.0.0
-  - click=7.1.2
-  - cloudpickle=1.6.0
-  - clyent=1.2.2
-  - cmarkgfm=0.4.2
-  - colorama=0.4.4
-  - conda=4.10.0
-  - conda-build=3.21.4
-  - conda-env=2.6.0
-  - conda-package-handling=1.7.2
-  - conda-verify=3.4.2
-  - contextlib2=0.6.0.post1
-  - coverage=5.5
-  - cryptography=3.4.7
-  - curl=7.71.1
-  - cycler=0.10.0
-  - cython=0.29.22
-  - cytoolz=0.11.0
-  - dask=2021.4.0
-  - dask-core=2021.4.0
-  - dbus=1.13.18
-  - decorator=4.4.2
-  - defusedxml=0.7.1
-  - diff-match-patch=20200713
-  - distributed=2021.4.0
-  - docutils=0.17
-  - entrypoints=0.3
-  - et_xmlfile=1.0.1
-  - expat=2.3.0
-  - fastcache=1.1.0
-  - filelock=3.0.12
-  - flake8=3.9.0
-  - flask=1.1.2
-  - freetype=2.10.4
-  - fsspec=0.8.7
-  - future=0.18.2
-  - get_terminal_size=1.0.0
-  - gettext=0.21.0
-  - gevent=21.1.2
-  - glib=2.68.0
-  - glob2=0.7
-  - gmp=6.2.1
-  - gmpy2=2.0.8
-  - greenlet=1.0.0
-  - h5py=2.10.0
-  - hdf5=1.10.4
-  - heapdict=1.0.1
-  - html5lib=1.1
-  - icu=58.2
-  - idna=2.10
-  - imageio=2.9.0
-  - imagesize=1.2.0
-  - importlib-metadata=3.7.3
-  - importlib_metadata=3.7.3
-  - iniconfig=1.1.1
-  - intel-openmp=2019.4
-  - intervaltree=3.1.0
-  - ipykernel=5.3.4
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.6.3
-  - itsdangerous=1.1.0
-  - jbig=2.1
-  - jdcal=1.4.1
-  - jedi=0.17.2
-  - jinja2=2.11.3
-  - joblib=1.0.1
-  - jpeg=9b
-  - json5=0.9.5
-  - jsonschema=3.2.0
-  - jupyter=1.0.0
-  - jupyter-packaging=0.7.12
-  - jupyter_client=6.1.12
-  - jupyter_console=6.4.0
-  - jupyter_core=4.7.1
-  - jupyter_server=1.4.1
-  - jupyterlab=3.0.11
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_server=2.4.0
-  - jupyterlab_widgets=1.0.0
-  - jupyterthemes=0.20.0
-  - keyring=22.3.0
-  - kiwisolver=1.3.1
-  - krb5=1.18.2
-  - lazy-object-proxy=1.6.0
-  - lcms2=2.12
-  - lesscpy=0.13.0
-  - libarchive=3.4.2
-  - libcurl=7.71.1
-  - libcxx=10.0.0
-  - libedit=3.1.20210216
-  - libev=4.33
-  - libffi=3.3
-  - libgfortran=3.0.1
-  - libiconv=1.16
-  - liblief=0.10.1
-  - libllvm10=10.0.1
-  - libllvm9=9.0.1
-  - libpng=1.6.37
-  - libsodium=1.0.18
-  - libspatialindex=1.9.3
-  - libssh2=1.9.0
-  - libtiff=4.2.0
-  - libuv=1.40.0
-  - libwebp-base=1.2.0
-  - libxml2=2.9.10
-  - libxslt=1.1.34
-  - llvm-openmp=10.0.0
-  - llvmlite=0.36.0
-  - locket=0.2.1
-  - lxml=4.6.3
-  - lz4-c=1.9.3
-  - lzo=2.10
-  - markupsafe=1.1.1
-  - matplotlib=3.3.4
-  - matplotlib-base=3.3.4
-  - mccabe=0.6.1
-  - mistune=0.8.4
-  - mkl=2019.4
-  - mkl-service=2.3.0
-  - mkl_fft=1.3.0
-  - mkl_random=1.1.1
-  - mock=4.0.3
-  - more-itertools=8.7.0
-  - mpc=1.1.0
-  - mpfr=4.0.2
-  - mpmath=1.2.1
-  - msgpack-python=1.0.2
-  - multipledispatch=0.6.0
-  - mypy_extensions=0.4.3
-  - navigator-updater=0.2.1
-  - nb_conda_kernels=2.3.1
-  - nbclassic=0.2.6
-  - nbclient=0.5.3
-  - nbconvert=6.0.7
-  - nbformat=5.1.3
-  - ncurses=6.2
-  - nest-asyncio=1.5.1
-  - networkx=2.5.1
-  - nltk=3.5
-  - nose=1.3.7
-  - notebook=6.3.0
-  - numba=0.53.1
-  - numexpr=2.7.3
-  - numpy=1.19.2
-  - numpy-base=1.19.2
-  - numpydoc=1.1.0
-  - olefile=0.46
-  - openpyxl=3.0.7
-  - openssl=1.1.1k
-  - packaging=20.9
-  - pandas=1.2.3
-  - pandoc=2.12
-  - pandocfilters=1.4.3
-  - parso=0.7.0
-  - partd=1.1.0
-  - path=15.1.2
-  - path.py=12.5.0
-  - pathlib2=2.3.5
-  - pathspec=0.7.0
-  - pathtools=0.1.2
-  - patsy=0.5.1
-  - pcre=8.44
-  - pep8=1.7.1
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pillow=8.1.2
-  - pip=21.0.1
-  - pkginfo=1.7.0
-  - pluggy=0.13.1
-  - ply=3.11
-  - prometheus_client=0.10.0
-  - prompt-toolkit=3.0.17
-  - prompt_toolkit=3.0.17
-  - psutil=5.8.0
-  - ptyprocess=0.7.0
-  - py=1.10.0
-  - py-lief=0.10.1
-  - pycodestyle=2.6.0
-  - pycosat=0.6.3
-  - pycparser=2.20
-  - pycurl=7.43.0.6
-  - pydocstyle=6.0.0
-  - pyerfa=1.7.2
-  - pyflakes=2.2.0
-  - pygments=2.8.1
-  - pyls-black=0.4.6
-  - pyls-spyder=0.3.2
-  - pyodbc=4.0.30
-  - pyopenssl=20.0.1
-  - pyparsing=2.4.7
-  - pyqt=5.9.2
-  - pyrsistent=0.17.3
-  - pysocks=1.7.1
-  - pytables=3.6.1
-  - pytest=6.2.3
-  - pytest-cov=2.11.1
-  - python=3.8.8
-  - python-dateutil=2.8.1
-  - python-jsonrpc-server=0.4.0
-  - python-language-server=0.36.2
-  - python-libarchive-c=2.9
-  - python.app=3
-  - pytz=2021.1
-  - pywavelets=1.1.1
-  - pyyaml=5.4.1
-  - pyzmq=20.0.0
-  - qdarkstyle=3.0.2
-  - qt=5.9.7
-  - qtawesome=1.0.2
-  - qtconsole=5.0.3
-  - qtpy=1.9.0
-  - readline=8.1
-  - readme_renderer=24.0
-  - regex=2021.4.4
-  - requests=2.25.1
-  - requests-toolbelt=0.9.1
-  - rfc3986=1.4.0
-  - ripgrep=12.1.1
-  - rope=0.18.0
-  - rtree=0.9.4
-  - ruamel_yaml=0.15.100
-  - scikit-image=0.17.2
-  - scikit-learn=0.24.1
-  - scipy=1.6.2
-  - seaborn=0.11.1
-  - send2trash=1.5.0
-  - setuptools=52.0.0
-  - simplegeneric=0.8.1
-  - singledispatch=3.6.1
-  - sip=4.19.8
-  - six=1.15.0
-  - snappy=1.1.8
-  - sniffio=1.2.0
-  - snowballstemmer=2.1.0
-  - sortedcollections=2.1.0
-  - sortedcontainers=2.3.0
-  - soupsieve=2.2.1
-  - sphinx=3.5.3
-  - sphinxcontrib=1.0
-  - sphinxcontrib-applehelp=1.0.2
-  - sphinxcontrib-devhelp=1.0.2
-  - sphinxcontrib-htmlhelp=1.0.3
-  - sphinxcontrib-jsmath=1.0.1
-  - sphinxcontrib-qthelp=1.0.3
-  - sphinxcontrib-serializinghtml=1.1.4
-  - sphinxcontrib-websupport=1.2.4
-  - spyder=4.2.3
-  - spyder-kernels=1.10.2
-  - sqlalchemy=1.4.5
-  - sqlite=3.35.4
-  - statsmodels=0.12.2
-  - sympy=1.7.1
-  - tbb=2020.3
-  - tblib=1.7.0
-  - terminado=0.9.4
-  - testpath=0.4.4
-  - textdistance=4.2.1
-  - threadpoolctl=2.1.0
-  - three-merge=0.1.1
-  - tifffile=2020.10.1
-  - tk=8.6.10
-  - toml=0.10.2
-  - toolz=0.11.1
-  - tornado=6.1
-  - tqdm=4.59.0
-  - traitlets=5.0.5
-  - twine=3.4.1
-  - typed-ast=1.4.2
-  - typing_extensions=3.7.4.3
-  - ujson=4.0.2
-  - unicodecsv=0.14.1
-  - unixodbc=2.3.9
-  - urllib3=1.26.4
-  - watchdog=1.0.2
-  - wcwidth=0.2.5
-  - webencodings=0.5.1
-  - werkzeug=1.0.1
-  - wheel=0.36.2
-  - widgetsnbextension=3.5.1
-  - wrapt=1.12.1
-  - wurlitzer=2.1.0
-  - xlrd=2.0.1
-  - xlsxwriter=1.3.8
-  - xlwings=0.23.0
-  - xlwt=1.3.0
-  - xmltodict=0.12.0
-  - xz=5.2.5
-  - yaml=0.2.5
-  - yapf=0.31.0
-  - zeromq=4.3.4
-  - zict=2.0.0
-  - zipp=3.4.1
-  - zlib=1.2.11
-  - zope=1.0
-  - zope.event=4.5.0
-  - zope.interface=5.3.0
-  - zstd=1.4.5
-  - pip:
-    - colormath==3.0.0
-    - humanfriendly==9.1
-    - ipython==7.10.0
-    - isort==4.3.21
-    - jupyter-contrib-core==0.3.3
-    - jupyter-contrib-nbextensions==0.5.1
-    - jupyter-highlight-selected-word==0.2.0
-    - jupyter-latex-envs==1.4.6
-    - jupyter-nbextensions-configurator==0.4.1
-    - littleutils==0.2.2
-    - outdated==0.2.0
-    - pandas-flavor==0.2.0
-    - pingouin==0.3.10
-    - property-manager==3.0
-    - pylint==2.7.1
-    - tabulate==0.8.9
-    - verboselogs==1.7
-    - wheel-filename==1.3.0
-    - xarray==0.17.0
+  - black>=19.10b0
+  - certifi>=2020.12.5
+  - matplotlib>=3.3.4
+  - numpy>=1.19.2
+  - packaging>=20.9
+  - pandas>=1.2.3
+  - pytest>=6.2.3
+  - pytest-cov>=2.11.1
+  - requests>=2.25.1
+  - scikit-learn>=0.24.1
+  - seaborn>=0.11.1
+  - tqdm>=4.59.0
